--- a/Spring-Project-employee/src/main/resources/application.properties
+++ b/Spring-Project-employee/src/main/resources/application.properties
@@ -1,14 +1,13 @@
 
-#----------------- server(tomcat)port config --------------
-server.port=8080
 
-#--------------------- Database Config -----------------------------
+#----------------- server(tomcat) port config ---------------------
+server.port=80
 
-spring.datasource.url= jdbc:mysql://localhost:3306/employeetestdb?createDatabaseIfNotExist=true
-spring.datasource.username= root
-spring.datasource.password=	
-
-#-------------------- JPA/Hibernate config ----------------------------
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#------------ data base config --------------------
+ spring.datasource.url = jdbc:mysql://localhost:3306/employeetestdb?createDatabaseIfNotExist=true
+ spring.datasource.username=root
+ spring.datasource.password=
+ 
+ #----------------- JPA/Hibernate config ----------------
+ spring.jpa.hibernate.ddl-auto= update
+ spring.jpa.show-sql=true
