--- a/Spring-Project-employee/pom.xml
+++ b/Spring-Project-employee/pom.xml
@@ -50,7 +50,15 @@
    			<groupId>org.projectlombok</groupId>
    			<artifactId>lombok</artifactId>
  		</dependency>
+ 		
+ 		<!-- send email -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+ 		
 	</dependencies>
+	
 
 	<build>
 		<plugins>
