--- a/Spring-Project-employee/pom.xml
+++ b/Spring-Project-employee/pom.xml
@@ -70,7 +70,12 @@
 			<version>3.17</version>
 		</dependency>
 		
-		
+		<!-- for PDF Export-->
+		<dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>2.1.7</version>
+		</dependency>
  		
 	</dependencies>
 	
