--- a/Spring-Project-employee/pom.xml
+++ b/Spring-Project-employee/pom.xml
@@ -70,6 +70,13 @@
 			<version>3.17</version>
 		</dependency>
 		
+		 <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui -->
+		<dependency>
+		    <groupId>org.springdoc</groupId>
+		    <artifactId>springdoc-openapi-ui</artifactId>
+		    <version>1.7.0</version>
+		</dependency>
+		
 		<!-- for PDF Export-->
 		<dependency>
 			<groupId>com.lowagie</groupId>
