--- a/Spring-Project-employee/pom.xml
+++ b/Spring-Project-employee/pom.xml
@@ -77,6 +77,13 @@
 		    <version>1.7.0</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.glassfish/javax.json -->
+		<dependency>
+		    <groupId>org.glassfish</groupId>
+		    <artifactId>javax.json</artifactId>
+		    <version>1.1.4</version>
+		</dependency>
+		
 		<!-- for PDF Export-->
 		<dependency>
 			<groupId>com.lowagie</groupId>
